syntax = "proto3";

package interviewer;

service InterviewerService {
  rpc SendInterviewer (InterviewerRequest) returns (InterviewerResponseList);
}

message InterviewerRequest {
  repeated string ids = 1; // Array of interviewer IDs
}

message InterviewerResponse {
  string id = 1;
  string name = 2;
  string mobile = 3;
  string email = 4;
  string password = 5;
  bool isBlocked = 6;
  bool isVerified = 7;
  bool isDetails = 8;
  string introduction = 9;
  string organization = 10;
  string university = 11;
  string currentDesignation = 12;
  int32 yearOfExperience = 13;
  bool isApproved = 14;
  string updatedAt = 15;
  string profileURL = 16;
}

message InterviewerResponseList {
  repeated InterviewerResponse interviewers = 1; // Array of InterviewerResponse
}
